--- a/Cryptocurrency_Volatilities.ipynb
+++ b/Cryptocurrency_Volatilities.ipynb
@@ -1,13 +1,18 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Summary of Trends Among the 24 Cryptocurrencies Included in this Survey\n",
+    "# **Summary of Trends  Among the 24 Cryptocurrencies Included in this Survey**\n",
     "\n",
-    "There is a ommon trend to be seen among the 24 cryptocurrencies  included in this survey  : daily price percentage changes , (defined as (P_today  -  P_yesterday)/Price_yesterday ). tends to frequently oscillate between  increases and offsetting decreases so that average price percentage changes are much smaller than either average price percentage increases or average price percentage decreases. \n",
+    "The goal of ths study is to find suitable cryptocurrencies for use in buy-and-sell transactions and also for use as investment vehicles.\n",
+    "  \n",
+    "  We want to strike an acceptable balance between low volatility, low transaction fees, scalability. fast transaction speeds, privacy and security,  and interoperability.\n",
+    "\n",
+    "As an initial phase in this study, we compare the actual price movements and price changes of cryptocurrencies which are frequently top listed in various of the critra listed in the preceding paragraph.\n",
+    "\n",
+    "There is a ommon trend to be seen among the 24 cryptocurrencies  included in this survey  : daily price percentage changes , (defined as (P_today  -  P_yesterday)/Price_yesterday ), tends to frequently oscillate between  increases and offsetting decreases so that average price percentage changes are much smaller than either average price percentage increases or average price percentage decreases. \n",
     "Price volatility as measured by annualized historic variances for cryptocurrency market returns for these various and / cryptocurrencies during the period 1/1/19 through 1/19/20  ranged between .72 and a high of 1.11 (for Aion). \n",
     "A number of cryptocurrencies were listed among top choices in multiple lists in multiple categories which this survey focused on, as is seen in upcoming slides  : These include Cardano, Litecoin, Monero, Dash, Zcash, Bitcoin Cash, EOS, XRP, Ethereum, and Zilliqa.\n",
     "  Therefore, some balance, trade-off, may be is acceptable between making a  selection  with higher price volatility but which combines low transaction fees with other desirable criteria such as interoperability, scalability,and /  or privacy  and/ or high marketcaps and/ or fast transaction speeds or being top-listed as a better investment for other criteria.\n",
